Fixed: overlapped carousel arrows on domain experties page.

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -816,3 +816,9 @@
 .w-55 {
   width: 55%;
 }
+
+.bottom-94p {
+  @include media-breakpoint-down(sm) {
+    bottom: 94%;
+  }
+}
